Thu Apr 20 11:47:53 1995    <tytso@rsx-11.mit.edu>

	* adm_extern.h: #include adm_defs.h, since that's no longer
		included by krb5.h

Mon Mar 27 07:56:26 1995 Chris Provenzano (proven@mit.edu)

        * adm_process.c, adm_kadmin.c, adm_adm_func.c, adm_kpasswd.c, 
	* adm_funcs, adm_nego.c adm_extern.c and adm_listen.c
                Use new calling convention for krb5_recvauth(), krb5_mk_priv(),
                krb5_rd_priv(), krb5_mk_safe(), and krb5_rd_safe().
		(Redid many of the internal functions to accomidate new a
		uth_context structure and remove old unnecessary structures.)

Fri Mar 24 14:38:06 1995    <tytso@rsx-11.mit.edu>

	* adm_network.c (setup_network): If /etc/services doesn't have the
		administration port, use a compiled in port.

Thu Mar  2 12:24:50 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in (ISODELIB): Remove reference to $(ISODELIB).

Wed Mar  1 16:29:53 1995  Theodore Y. Ts'o  <tytso@dcl>

	* configure.in: Remove ISODE_INCLUDE, replace check for -lsocket
		and -lnsl with WITH_NETLIB check.

Tue Feb 28 02:23:46 1995  John Gilmore  (gnu at toad.com)

	* *.c:  Avoid <krb5/...> and <com_err.h> includes.

Fri Feb  3 07:50:14 1995  Theodore Y. Ts'o  (tytso@dcl)

	* adm_v4_pwd.c: Don't use BITS64, use SIZEOF_LONG

Wed Feb 01 22:05:35 1995  Chris Provenzano (proven@mit.edu)

	* adm_process.c, adm_extern.h (cpw_keyproc()) Added 
		krb5_keytype arg.

Wed Jan 25 16:54:40 1995  Chris Provenzano (proven@mit.edu)

        * Removed all narrow types and references to wide.h and narrow.h

Wed Jan 18 10:26:30 1995    <tytso@rsx-11.mit.edu>

	* adm_server.c (process_args): Modify getopt args so that the 'M'
		option takes an argument.  (krb5 bugs 984)

Fri Jan 13 15:23:47 1995  Chris Provenzano (proven@mit.edu)

    * Added krb5_context to all krb5_routines

Mon Dec 19 18:12:18 1994  Theodore Y. Ts'o  (tytso@dcl)

	* adm_listen.c (kill_children): Use syslog instead of krb_log.

Tue Nov  1 18:19:36 1994  Mark Eichin  (eichin@cygnus.com)
