@@ -1,3 +1,13 @@
+Thu Apr 20 18:05:00 1995  Mark Eichin  <eichin@cygnus.com>
+
+	Changes from Ian Taylor <ian@cygnus.com> to support testsuite.
+	* adm_extern.h: declare admin_port.
+	* adm_extern.c: define admin_port.
+	* adm_server.c (process_args): set admin_port from -p command line
+	argument.
+	(usage): document -p port option.
+	* adm_network.c (setup_network): use admin_port if set.
+
 Thu Apr 20 11:47:53 1995    <tytso@rsx-11.mit.edu>
 
 	* adm_extern.h: #include adm_defs.h, since that's no longer
